--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="단말기 현장관리 web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -29,6 +29,10 @@
     <script>
       // script loading 동안 배경이 흰색으로 보이는 문제(flicker 현상 발생)
       let mode = JSON.parse(window.localStorage.getItem('themeMode'));
+      if (!mode) {
+        mode = 'system';
+        window.localStorage.setItem('themeMode', JSON.stringify(mode));
+      }
       if (mode === 'dark' || (mode === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
         document.body.style.backgroundColor = '#121212';
       }
